--- a/TokenAuthWebApiCore.Server/appsettings.json
+++ b/TokenAuthWebApiCore.Server/appsettings.json
@@ -1,12 +1,19 @@
 ﻿{
-	"Logging": {
-		"IncludeScopes": false,
-		"LogLevel": {
-			"Default": "Warning"
-		}
-	},
 
 	"ConnectionStrings": {
 		"SecurityConnection": "data source=TOCANE-LATITUDE;initial catalog=Db_Angular2TokenAuthWebApiCore;persist security info=True;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+	},
+	"Logging": {
+		"IncludeScopes": false,
+		"LogLevel": {
+			"Default": "Debug",
+			"System": "Information",
+			"Microsoft": "Information"
+		}
+	},
+	"JwtSecurityToken": {
+		"Key": "FooBarQuuxIsTheStandardTypeOfStringWeUse12345",
+		"Issuer": "http://logcorner.com",
+		"Audience": "http://logcorner.com"
 	}
 }
