--- a/VS2015/TokenAuthWebApiCore.Server/src/TokenAuthWebApiCore.Server/appsettings.json
+++ b/VS2015/TokenAuthWebApiCore.Server/src/TokenAuthWebApiCore.Server/appsettings.json
@@ -1,13 +1,18 @@
-{
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  },
-  "ApplicationInsights": {
-    "InstrumentationKey": "2a511e23-a53b-4bc8-82ac-d7626c770ad9"
-  }
+﻿{
+	"ConnectionStrings": {
+		"SecurityConnection": "data source=.;initial catalog=VS2015Db_TokenAuthWebApiCore.Server;persist security info=True;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+	},
+	"Logging": {
+		"IncludeScopes": false,
+		"LogLevel": {
+			"Default": "Debug",
+			"System": "Information",
+			"Microsoft": "Information"
+		}
+	},
+	"JwtSecurityToken": {
+		"Key": "YouCannotAlterTokenIfYouCannotHoldThisVeryLongKey",
+		"Issuer": "http://logcorner.com",
+		"Audience": "http://logcorner.com"
+	}
 }
